--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
 				</canvas>
 		    </section>
-	    <footer>
-		    Footer
-	    </footer>
+	 <footer>
+  Use the arrow keys to control your spaceship:<br>
+  &nbsp;&nbsp;Press UP to accelerate<br>
+  &nbsp;&nbsp;Press LEFT or RIGHT to rotate<br>
+  &nbsp;&nbsp;Press H for hyperspace<br>
+</footer>
+
 	</body>
 </html>
