--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="utf-8">
     <title>Asteroids Game</title>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="styles.css">
     <script src="processing.js"></script>
 </head>
 
-<body>
+<body style="font-family: 'Open Sans', sans-serif; background:#d3d3d3; text-align:center;">
+
     <header>
-        <h1>Asteroids Game</h1>
+        <h1 style="margin-top:20px; font-size:40px;">Asteroids Game</h1>
     </header>
 
-    <section id="content">
-        <canvas id="AsteroidsGame" 
+    <section id="content" style="margin-top:20px;">
+        <canvas id="AsteroidsGame"
                 data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
         </canvas>
     </section>
 
-    <footer style="margin-top:20px; font-size:18px; line-height:1.6;">
+    <footer style="margin-top:25px; font-size:18px; font-style:italic;">
         Use the arrow keys to control your spaceship:<br>
-        &nbsp;&nbsp;• Press <strong>UP</strong> to accelerate<br>
-        &nbsp;&nbsp;• Press <strong>LEFT</strong> or <strong>RIGHT</strong> to rotate<br>
-        &nbsp;&nbsp;• Press <strong>H</strong> for hyperspace<br>
+        &nbsp;&nbsp;Press <strong>UP</strong> to accelerate<br>
+        &nbsp;&nbsp;Press <strong>LEFT</strong> or <strong>RIGHT</strong> to rotate<br>
+        &nbsp;&nbsp;Press <strong>H</strong> for hyperspace<br>
     </footer>
+
 </body>
 </html>
