--- a/index.html
+++ b/index.html
@@ -3,28 +3,22 @@
 <head>
     <meta charset="utf-8">
     <title>Asteroids Game</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="styles.css">
     <script src="processing.js"></script>
 </head>
 
-<body style="font-family: 'Open Sans', sans-serif; background:#d3d3d3; text-align:center;">
+<body>
 
-    <header>
-        <h1 style="margin-top:20px; font-size:40px;">Asteroids Game</h1>
-    </header>
+    <h1>Asteroids Game</h1>
 
-    <section id="content" style="margin-top:20px;">
-        <canvas id="AsteroidsGame"
-                data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
-        </canvas>
-    </section>
+    <canvas id="AsteroidsGame"
+            data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
+    </canvas>
 
-    <footer style="margin-top:25px; font-size:18px; font-style:italic;">
-        Use the arrow keys to control your spaceship:<br>
-        &nbsp;&nbsp;Press <strong>UP</strong> to accelerate<br>
-        &nbsp;&nbsp;Press <strong>LEFT</strong> or <strong>RIGHT</strong> to rotate<br>
-        &nbsp;&nbsp;Press <strong>H</strong> for hyperspace<br>
+    <footer>
+        <p>Use the arrow keys to control your spaceship:</p>
+        <p>Press UP to accelerate</p>
+        <p>Press LEFT or RIGHT to rotate</p>
+        <p>Press H for hyperspace</p>
     </footer>
 
 </body>
