--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <footer>
         <p>Use the arrow keys to control your spaceship:</p>
-        <p>Press UP to accelerate</p>
-        <p>Press LEFT or RIGHT to rotate</p>
+        <p>Press W to accelerate</p>
+        <p>Press A or D to rotate</p>
         <p>Press H for hyperspace</p>
     </footer>
 
