--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     </canvas>
 
     <footer>
+        <p>Get 50!</p>
         <p>Use the arrow keys to control your spaceship:</p>
         <p>Press W to accelerate</p>
         <p>Press A or D to rotate</p>
         <p>Press H for hyperspace</p>
+        <p>Space To Shoot</p>
     </footer>
 
 </body>
